[#16014] use java8 Arrays.asList instead of List.of